new stuff added

--- a/artist.html
+++ b/artist.html
@@ -4,6 +4,9 @@
                   <link rel="stylesheet" href="./css/artist/bodyStyle.css">
                       <link rel="stylesheet" href="./css/artist/left.css">
                       <link rel="stylesheet" href="./css/artist/right.css">
+        
+                    <script src="js/jquery-1.7.2.min.js"></script>
+    <script src="js/jquery-ui-1.8.21.custom.min.js"></script>
 
 
 
