--- a/userProfile.html
+++ b/userProfile.html
@@ -6,6 +6,11 @@
           <link rel="stylesheet" href="./css/user-profile/bodyStyle.css">
 
           <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        
+                    <script src="js/jquery-1.7.2.min.js"></script>
+    <script src="js/jquery-ui-1.8.21.custom.min.js"></script>
+                <script src="temp.js"></script>
+
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     </head>
@@ -18,7 +23,7 @@
                         <div id="editRemoveImage">
                             <button class="editRemoveImageElement">Edit Image</button>
                             <button class="editRemoveImageElement">Remove Image</button>
-                            <button class="editRemoveImageElement logout">Logout</button>
+                            <button class="editRemoveImageElement logout" onclick='logoutUser()'>Logout</button>
                         </div>
                     </div>
                 </div>
