added jplayer playbar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <script src="js/recentlyPlayedPage.js"></script>
     <script src="js/playListPrototypePage.js"></script>
     <script src="js/main.js"></script>
-
+	
+	<script src="js/jPlayer/jquery.jplayer.min.js"></script>
+	<script type="text/javascript" src="js/jPlayer/jplayer.playlist.min.js"></script>
     
 
 
@@ -36,6 +38,7 @@
 </head>
 <!--    onload='loadBrowseTabScreen()'-->
 <body>
+<div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
     <div id="main">
         <div id=left>
             <div id="leftWrapper">
@@ -189,6 +192,8 @@
         </div>
     </div>
     <div id="playBar">
+		<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+		
         <div id="playBarLeft">
             <div id=playBarImage style="background-image: url(./images/albumCover1.jpg);"></div>
             <div id=playBarLeftAddSong>
@@ -204,26 +209,50 @@
             <div id=playBarFunctionality>
                 <i class="material-icons icons playBarFunctionalityButton">thumb_down</i>
                 <i class="material-icons icons playBarFunctionalityButton" style="font-size:35px;">skip_previous</i>
-                <i class="material-icons icons playBarFunctionalityButton" style="font-size:35px;">play_circle_outline</i>
+				<button class="jp-play" role="button" tabindex="0">
+					<i class="material-icons icons" style="font-size:35px;">play_circle_outline</i>
+				</button>
                 <i class="material-icons icons playBarFunctionalityButton" style="font-size:35px;">skip_next</i>
                 <i class="material-icons icons playBarFunctionalityButton">thumb_up</i>
             </div>
+			
             <div id="progressBar">
+			<div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
+			<div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
+			<div>&nbsp;</div>
                 <div id="progressBarWrapper">
-                    <input type="range" id='progressBar'>
+                    <div class="jp-seek-bar">
+						<div class="jp-play-bar"></div>
+					</div>
                 </div>
+			
             </div>
         </div>
         <div id="playBarRight">
             <div id="volumeController">
-                <i class="material-icons icons">volume_up</i>
-                <input type="range" id='volumeBar'>
-                <i class="material-icons icons">volume_down</i>
-                <i class="material-icons icons">playlist_play</i>
+				<div class="jp-volume-controls">
+					<button class="jp-mute" role="button" tabindex="0">
+						<i class="material-icons icons">volume_up</i>
+					</button>
+					<div class="jp-volume-bar">
+						<div class="jp-volume-bar-value"></div>
+					</div>
+				</div>
             </div>
         </div>
+		<div class="CurrentPlaylist" style="display: none;">
+			<div class="jp-playlist">
+				<ul>
+					<li>&nbsp;</li>
+				</ul>
+			</div>
+		</div
+
     
     </div>
-
+	
+	
+	
+</div>
 </body>
 </html>
